# py-docker-template

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
src/my_package/: main.py
